# oz_pchedule_be

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  dockerfile.base  dockerfile.dev  dockerfile.prod  fix_requirements.py  main.py  nginx.conf  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  requirements_fixed.txt
.github/workflows/: ci-cd-full.yml
apps/core/: badwords.txt  profanity_filter.py
apps/interactions/: models.py  serializers.py  tests.py  urls.py  views.py
apps/interactions/migrations/: 0001_initial.py
apps/notification/: models.py  serializers.py  tests.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py
apps/post/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/schedule/: admin.py  apps.py  models.py  profanity_filter.py  serializers.py  tests.py  urls.py  views.py
apps/schedule/migrations/: 0001_initial.py  0002_populate_category.py  0003_populate_weekday.py  0003_remove_category_category_id_and_more.py  0003_weekday_rename_is_deleted_schedule_complete_and_more.py  0004_schedule_time_can_null.py
apps/user/: admin.py  authentication.py  backends.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_remove_token_is_revoked_tokenblacklist_and_more.py  0004_remove_tokenblacklist_user_delete_token_and_more.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
scripts/: run.sh
utils/: exceptions.py
