[project]
name = "pchedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "docker>=7.1.0",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "pre-commit==4.3.0",
    "psycopg[binary]>=3.2.10",
    "ruff==0.13.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
    "drf-yasg>=1.21.10",
    "drf-spectacular>=0.28.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.setuptools]
packages = ["apps", "config"]
